# computation-py

./: .coveragerc  .cspell.jsonc  .gitignore  .pre-commit-config.yaml  .ruff.toml  .travis.yml  LICENSE  README.md  pyproject.toml  setup.cfg
.circleci/: config.yml
.github/workflows/: ci.yml
computation/: utils.py
computation/automata/: dfa.py  farule.py  nfa.py  pattern.py  pda.py  state.py  utils.py
computation/interpreter/: exceptions.py  expressions.py  interpreter.py  parser.py  statements.py  utils.py
computation/interpreter/expressions/: __init__.py  abstract.py
computation/lambda_calculus/: __init__.py  basic.py  calc.py  calculation.py  condition.py  func.py  funcs.py  generics.py  number.py  reduction.py  streams.py  struct.py  types.py
computation/tests/: test_expr.py  test_pda.py  test_stmt.py
computation/tests/automata/: test_dfa.py  test_nfa.py  test_pattern.py  test_pda.py
computation/tests/interpreter/: test_expr.py  test_interpreter.py  test_stmt.py
computation/tests/lambda/: test_lambda.py
computation/tests/turing_machine/: test_tape.py
computation/turing_machine/: rule.py  tape.py
src/: interpreter.py  utils.py
src/automata/: dfa.py  dpda.py  farule.py  nfa.py  pattern.py  pda.py
src/interpreter/: expressions.py  interpreter.py  statements.py  test_expr.py  test_stmt.py  utils.py
tests/: test_utils.py
tests/automata/: test_dfa.py  test_nfa.py  test_pattern.py  test_pda.py
tests/interpreter/: test_expr.py  test_interpreter.py  test_stmt.py
tests/lambda_calculus/: test_lambda.py
tests/turing_machine/: test_rule.py  test_tape.py
