[tool.poetry]
name = "computation-py"
version = "0.1.0"
# doc
authors = ["Weiliang Li <to.be.impressive@gmail.com>"]
description = "Python implementation for Understanding Computation book."
license = "MIT"

[tool.poetry.dependencies]
python = "^3.9"

# 3rd party
lark = "^1.1.8"

[tool.poetry.group.dev.dependencies]
black = "^23.7"
flake8 = "^6.1.0"
ipython = "^8.1.0"
isort = "^5.13.2"
mypy = "^1.5.0"
pytest = "^7.4.0"
pytest-cov = "^4.1.0"

[build-system]
build-backend = "poetry.core.masonry.api"
requires = ["poetry-core>=1.0.0"]

[tool.isort]
multi_line_output = 3
profile = "black"
