[tool.poetry]
name = "computation-py"
version = "0.1.0"
# doc
authors = ["Weiliang Li <to.be.impressive@gmail.com>"]
description = "Python implementation for Understanding Computation book."
license = "MIT"

[tool.poetry.dependencies]
python = "^3.10"

# 3rd party
lark = "^1.1.8"

[tool.poetry.group.dev.dependencies]
ipython = "^8.26.0"
mypy = "^1.5.0"
ruff = "^0.4.7"

# test
pytest = "^8.2.2"
pytest-cov = "^5.0.0"

[build-system]
build-backend = "poetry.core.masonry.api"
requires = ["poetry-core>=1.0.0"]

[tool.isort]
multi_line_output = 3
profile = "black"
