[tool.poetry]
name = "computation-py"
version = "0.1.0"
# doc
authors = ["Weiliang Li <to.be.impressive@gmail.com>"]
description = "Python implementation for Understanding Computation book."
license = "MIT"

[tool.poetry.dependencies]
python = "^3.10"

# 3rd party
lark = "^1.2.2"

[tool.poetry.group.dev.dependencies]
ipython = "^8.29.0"
mypy = "^1.13.0"
ruff = "^0.8.0"

[tool.poetry.group.test.dependencies]
pytest = "^8.3.3"
pytest-cov = "^6.0.0"

[build-system]
build-backend = "poetry.core.masonry.api"
requires = ["poetry-core>=1.0.0"]

[tool.pytest.ini_options]
addopts = "--cov=computation"

[tool.coverage.report]
exclude_lines = [
    # Have to re-enable the standard pragma
    "pragma: no cover",
    "def __",
    # Don't complain if tests don't hit defensive assertion code:
    "raise Unreachable",
    "raise NotImplementedError",
    "print",
]
